<resources>
    <string name="app_name">AppUi</string>

    <string name="widget_expand_toggle_button">Expand/Collapse Button</string>

    <string name="loader_no_lists">There are no lists here.</string>
    <string name="loader_no_recent_activity_found">No recent activity found.</string>
    <string name="loader_end_list">You have reached the end of the list.</string>

    <string name="information">Information</string>
    <string name="rating">Rating</string>
    <string name="read_more">Read More</string>
    <string name="more">More</string>
    <string name="actors">Actors</string>
    <string name="directors">Directors</string>
    <string name="producer">Producer</string>
    <string name="editors">Editors</string>
    <string name="homepage">Homepage</string>
    <string name="first_aired">First Aired</string>
    <string name="release_date">Release Date</string>
    <string name="classification">Classification</string>
    <string name="revenue">Revenue</string>
    <string name="budget">Budget</string>
    <string name="more_info">More Info</string>
    <string name="last_aired">Last Aired</string>
    <string name="episode_runtime">Episode runtime</string>
    <string name="origin_country">Origin country</string>
    <string name="assigned_genres">Assigned genres</string>
    <string name="summary">Summary</string>
    <string name="biography">Biography</string>
    <string name="japanese_title">Japanese Title</string>
    <string name="english_title">English title</string>
    <string name="romanji_title">Romanji title</string>
    <string name="studios">Studio\'s</string>
    <string name="synonyms">Synonyms</string>
    <string name="spoiler_alert">Warning: This may contain spoilers.</string>
    <string name="expandcollapse_button">Expand/Collapse Button</string>
    <string name="end_list">You have reached the end of the list.</string>
    <string name="no_lists">There are no lists here.</string>
    <string name="title_title">Title</string>
    <string name="title_description">Description</string>
    <string name="title_make_public">Make public</string>
    <string name="title_user_profile">User Profile</string>
    <string name="user_total_watched">Total watched</string>
    <string name="user_reviews">Reviews</string>
    <string name="user_followers">Followers</string>
    <string name="user_following">Following</string>
    <string name="user_activity">Activity</string>
    <string name="no_recent_activity_found">No recent activity found.</string>
    <string name="cast_and_actors">Cast and Actors</string>

    <string name="duration_minutes">%1$d minutes</string>
    <string name="rating_votes">%1$d votes</string>
</resources>
