<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <include layout="@layout/divider"/>

    <TextView
        style="@style/MediaDetail.SectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cast_and_actors"/>

    <LinearLayout
        android:id="@+id/detail_about_crew_actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actors"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/detail_about_crew_actors_content"
            style="@style/MediaDetail.SectionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_about_crew_directors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directors"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/detail_about_crew_directors_content"
            style="@style/MediaDetail.SectionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_about_crew_producer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/producer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/detail_about_crew_producer_content"
            style="@style/MediaDetail.SectionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_about_crew_editors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editors"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/detail_about_crew_editors_content"
            style="@style/MediaDetail.SectionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_about_crew_homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homepage"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/detail_about_crew_homepage_content"
            style="@style/MediaDetail.SectionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:maxLines="2"/>
    </LinearLayout>
</LinearLayout>