<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <include layout="@layout/divider"/>

    <TextView
        style="@style/MediaDetail.SectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_aired"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/detail_about_info_first_aired"
                style="@style/MediaDetail.SectionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:maxLines="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_aired"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/detail_about_info_last_aired"
                style="@style/MediaDetail.SectionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:maxLines="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episode_runtime"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/detail_about_info_episode_runtime"
                style="@style/MediaDetail.SectionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:maxLines="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/origin_country"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/detail_about_info_origin_country"
                style="@style/MediaDetail.SectionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:maxLines="2"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>