<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_edit_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_title"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_edit_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_description"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <net.egordmitriev.watchall.appui.widgets.ColorPicker
        android:id="@+id/dialog_edit_color"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        app:colors="@array/colorpicker_colors"
        app:orientation="horizontal"
        app:selectedColorIndex="4"/>

    <CheckBox
        android:id="@+id/dialog_edit_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_make_public"/>
</LinearLayout>